<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.calendar.schedule.AssignShiftsActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/schedule_employee_choose"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="7dp">

        <AutoCompleteTextView
            android:id="@+id/AssignShiftsDropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:inputType="none"
            android:popupTheme="@style/scrollbar_style" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/AssignShiftsButtonTV"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_employee"
        android:textColor="@color/white"
        android:background="@null"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/AssignShiftsDateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="Date"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/ShiftPreviewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/morning_shift"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ShiftPreviewRecycler"
        android:layoutAnimation="@anim/layout_animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/AssignShiftsBackButton"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:textColor="@color/white"
        android:background="@null"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:onClick="goBack"/>

</LinearLayout>